Made navigation changes

--- a/about.html
+++ b/about.html
@@ -30,11 +30,14 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">Rishi Bodke</span>
-        <ul class="nav nav-pills justify-content-end">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Rishi Bodke</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ms-auto nav-pills justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Portfolio</a>
           </li>
@@ -42,206 +45,213 @@
             <a class="nav-link" href="certifications.html">Certifications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="about.html">About</a>
+            <a class="nav-link active text-light" aria-current="page" href="about.html">About</a>
           </li>
         </ul>
       </div>
-    </nav>
-    <h1>About</h1>
-    <div class="my-4">
-      <div>
-        <img src="assets/me.jpg" class="col-md-3 float-md-end mb-2 ms-md-3 rounded-circle"
-          srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x" alt="the author's profile picture">
-      </div>
-      <div>
-        <p>I'm a UI/UX Designer and Front-end Developer from India, working in Mobility & User Experience and Web
-          Design & Development.</p>
-        <p>I enjoy turning complex problems into simple, beautiful and intuitive designs.
-          My job is to make designs and develop websites so that it is not only functional and user-friendly
-          but at the same time attractive.
-        </p>
-        <p>I like to create beautiful and efficient websites for my customers and I love going through the entire
-          process with the customer from concept, to design and then development and launch.</p>
-      </div>
-      <div>
-        <h5>Goals for the future</h5>
-        <p>
-          In the near future, I want to go, live and work in Japan and experience it for myself.
-          <br>My long term goal is to travel all around the world exploring all kinds of places, and meeting new
-          people.
+    </div>
+  </nav>
+
+  <main>
+    <div class="container">
+      <section>
+        <h1 class="mt-5">About</h1>
+        <div class="my-4">
+          <div>
+            <img src="assets/me.jpg" class=" img-fluid col-md-3 float-md-end mb-2 ms-md-3 rounded-circle"
+              srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x" alt="the author's profile picture">
+          </div>
+          <div>
+            <p>I'm a UI/UX Designer and Front-end Developer from India, working in Mobility & User Experience and Web
+              Design & Development.</p>
+            <p>I enjoy turning complex problems into simple, beautiful and intuitive designs.
+              My job is to make designs and develop websites so that it is not only functional and user-friendly
+              but at the same time attractive.
+            </p>
+            <p>I like to create beautiful and efficient websites for my customers and I love going through the entire
+              process with the customer from concept, to design and then development and launch.</p>
+          </div>
+          <div>
+            <h5>Goals for the future</h5>
+            <p>
+              In the near future, I want to go, live and work in Japan and experience it for myself.
+              <br>My long term goal is to travel all around the world exploring all kinds of places, and meeting new
+              people.
+            </p>
+          </div>
+          <hr />
+        </div>
+      </section>
+      <section class="resume-section">
+        <div class="row">
+          <div class="col-lg-6">
+            <h4 class="section-title">EXPERIENCE</h4>
+            <ul class="time-line">
+              <li class="time-line-item">
+                <span class="badge bg-primary">Oct 2021 ~ Present</span>
+                <h6 class="time-line-item-title">Project Engineer</h6>
+                <p class="time-line-item-subtitle">Wipro Limited</p>
+                <p class="time-line-item-content">Project Engineer working in Mobility and User Experience practice.
+                </p>
+              </li>
+              <li class="time-line-item">
+                <span class="badge bg-primary">2018 ~ Present</span>
+                <h6 class="time-line-item-title">Freelancer</h6>
+                <p class="time-line-item-subtitle">Web Design & Development</p>
+                <p class="time-line-item-content">Making designs for Web and Apps, designing banners, developing
+                  websites
+                  using CMS like WordPress, Joomla and Drupal.</p>
+              </li>
+
+              <li class="time-line-item">
+                <span class="badge bg-primary">Jan 2018 - Dec 2021</span>
+                <h6 class="time-line-item-title">Freelance Contributor - Usabilitiy Testing</h6>
+                <p class="time-line-item-subtitle">UserTesting.com</p>
+                <p class="time-line-item-content">Usability Testing of new websites and applications or new features
+                  before they are
+                  launched to the public.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <h4 class="section-title">EDUCATION</h4>
+            <ul class="time-line">
+              <li class="time-line-item">
+                <span class="badge bg-primary">Jan 2022 ~ Present</span>
+                <h6 class="time-line-item-title">Google UX Design Course</h6>
+                <p class="time-line-item-subtitle">Coursera</p>
+                <p class="time-line-item-content">Currently doing the Google UX Design Course on Coursera.
+                </p>
+              </li>
+              <li class="time-line-item">
+                <span class="badge bg-primary">2017 - 2021</span>
+                <h6 class="time-line-item-title">Bachelor's In Computer Science and Engineering</h6>
+                <p class="time-line-item-subtitle">Rajasthan Technical University, India</p>
+                <p class="time-line-item-content">Bachelor of Technology, Computer Science and Engineering</p>
+              </li>
+              <li class="time-line-item">
+                <span class="badge bg-primary">2004 - 2016</span>
+                <h6 class="time-line-item-title">Schooling</h6>
+                <p class="time-line-item-subtitle">Kendriya Vidyalaya Sangathan, India</p>
+                <p class="time-line-item-content">Elementary, Secondary and Higher Secondary schooling from Kendriya
+                  Vidyalaya.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h4>SKILLS</h4>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+          <div class="col">
+            <div class="card h-100">
+              <h5 class="card-header">Design</h5>
+              <div class="card-body">
+                <p class="card-text"> Mobile & Desktop UI/UX Design, Research, Wireframing, Sketching, Prototyping,
+                  Visual Design, Responsive Design, Usability Testing
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100">
+              <h5 class="card-header">Front-end Development</h5>
+              <div class="card-body">
+                <p class="card-text"> HTML5, CSS3, JavaScript, Sass, BootStrap, ReactJS, WordPress, Drupal, Joomla!
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100">
+              <h5 class="card-header">Software</h5>
+              <div class="card-body">
+                <p class="card-text"> Figma, Sketch, Proto.io, Invision, AdobeXD, Visual Studio Code, Microsoft Office
+                  365
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h4>PERSONAL DETAILS</h4>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+          <div class="col">
+            <div class="card h-100">
+              <h5 class="card-header"><i class="fa fa-language" aria-hidden="true"></i> Languages </h5>
+              <div class="card-body">
+                <p class="card-text"> English (fluent), Hindi(native),
+                  Marathi(native), Japanese (conversational)
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100">
+              <h5 class="card-header">Interests</h5>
+              <div class="card-body">
+                <p class="card-text"> Japan, Japanese Culture & History, India, Indian Culture & History, Travelling
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100">
+              <h5 class="card-header">Hobbies</h5>
+              <div class="card-body">
+                <p class="card-text"> Reading, Photography, Listening to Music, Sketching
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="cta" style="margin-bottom: 0;"><a class="btn btn-primary"
+          href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing"
+          target="_blank">Download Resume</a></div>
+      <hr />
+      <div class="mt-3">
+        <h5>Want to Contact?</h5>
+        <p>Send me a quick Mail<a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+            <i title="email" class="far fa-envelope fa-lg social"></i>
+          </a>
+          Or Connect with me on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+            <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
+          </a>
         </p>
       </div>
       <hr />
-
+      <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
+        data-type="VERTICAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link"
+          href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a>
+      </div>
     </div>
-    <section class="resume-section">
-      <div class="row">
-        <div class="col-lg-6">
-          <h4 class="section-title">EXPERIENCE</h4>
-          <ul class="time-line">
-            <li class="time-line-item">
-              <span class="badge bg-primary">Oct 2021 ~ Present</span>
-              <h6 class="time-line-item-title">Project Engineer</h6>
-              <p class="time-line-item-subtitle">Wipro Limited</p>
-              <p class="time-line-item-content">Project Engineer working in Mobility and User Experience practice.
-              </p>
-            </li>
-            <li class="time-line-item">
-              <span class="badge bg-primary">2018 ~ Present</span>
-              <h6 class="time-line-item-title">Freelancer</h6>
-              <p class="time-line-item-subtitle">Web Design & Development</p>
-              <p class="time-line-item-content">Making designs for Web and Apps, designing banners, developing websites
-                using CMS like WordPress, Joomla and Drupal.</p>
-            </li>
+  </main>
 
-            <li class="time-line-item">
-              <span class="badge bg-primary">Jan 2018 - Dec 2021</span>
-              <h6 class="time-line-item-title">Freelance Contributor - Usabilitiy Testing</h6>
-              <p class="time-line-item-subtitle">UserTesting.com</p>
-              <p class="time-line-item-content">Usability Testing of new websites and applications or new features
-                before they are
-                launched to the public.
-              </p>
-            </li>
-          </ul>
-        </div>
-        <div class="col-lg-6">
-          <h4 class="section-title">EDUCATION</h4>
-          <ul class="time-line">
-            <li class="time-line-item">
-              <span class="badge bg-primary">Jan 2022 ~ Present</span>
-              <h6 class="time-line-item-title">Google UX Design Course</h6>
-              <p class="time-line-item-subtitle">Coursera</p>
-              <p class="time-line-item-content">Currently doing the Google UX Design Course on Coursera.
-              </p>
-            </li>
-            <li class="time-line-item">
-              <span class="badge bg-primary">2017 - 2021</span>
-              <h6 class="time-line-item-title">Bachelor's In Computer Science and Engineering</h6>
-              <p class="time-line-item-subtitle">Rajasthan Technical University, India</p>
-              <p class="time-line-item-content">Bachelor of Technology, Computer Science and Engineering</p>
-            </li>
-            <li class="time-line-item">
-              <span class="badge bg-primary">2004 - 2016</span>
-              <h6 class="time-line-item-title">Schooling</h6>
-              <p class="time-line-item-subtitle">Kendriya Vidyalaya Sangathan, India</p>
-              <p class="time-line-item-content">Elementary, Secondary and Higher Secondary schooling from Kendriya
-                Vidyalaya.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section>
-      <h4>SKILLS</h4>
-      <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
-        <div class="col">
-          <div class="card h-100">
-            <h5 class="card-header">Design</h5>
-            <div class="card-body">
-              <p class="card-text"> Mobile & Desktop UI/UX Design, Research, Wireframing, Sketching, Prototyping,
-                Visual Design, Responsive Design, Usability Testing
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card h-100">
-            <h5 class="card-header">Front-end Development</h5>
-            <div class="card-body">
-              <p class="card-text"> HTML5, CSS3, JavaScript, Sass, BootStrap, ReactJS, WordPress, Drupal, Joomla!
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card h-100">
-            <h5 class="card-header">Software</h5>
-            <div class="card-body">
-              <p class="card-text"> Figma, Sketch, Proto.io, Invision, AdobeXD, Visual Studio Code, Microsoft Office 365
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h4>PERSONAL DETAILS</h4>
-      <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
-        <div class="col">
-          <div class="card h-100">
-            <h5 class="card-header"><i class="fa fa-language" aria-hidden="true"></i> Languages </h5>
-            <div class="card-body">
-              <p class="card-text"> English (fluent), Hindi(native),
-                Marathi(native), Japanese (conversational)
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card h-100">
-            <h5 class="card-header">Interests</h5>
-            <div class="card-body">
-              <p class="card-text"> Japan, Japanese Culture & History, India, Indian Culture & History, Travelling
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card h-100">
-            <h5 class="card-header">Hobbies</h5>
-            <div class="card-body">
-              <p class="card-text"> Reading, Photography, Listening to Music, Sketching
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="cta" style="margin-bottom: 0;"><a class="btn btn-primary"
-        href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing"
-        target="_blank">Download Resume</a></div>
+  <footer class="bg-light">
     <hr />
-    <div class="mt-3">
-      <h5>Want to Contact?</h5>
-      <p>Send me a quick Mail<a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-          <i title="email" class="far fa-envelope fa-lg social"></i>
-        </a>
-        Or Connect with me on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
-          <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
-        </a>
-      </p>
+    <div class="d-flex justify-content-center">
+      <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+        <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
+      </a>
+      <a class="px-2" href="https://github.com/rishi698" target="_blank">
+        <i title="github" class="fab fa-github fa-lg social"></i>
+      </a>
+      <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+        <i title="email" class="far fa-envelope fa-lg social"></i>
+      </a>
     </div>
-    <hr />
-    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
-      data-type="VERTICAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link"
-        href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a>
-    </div>
-
-    </main>
-
-    <footer class="bg-light">
-      <hr />
-      <div class="d-flex justify-content-center">
-        <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
-          <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
-        </a>
-        <a class="px-2" href="https://github.com/rishi698" target="_blank">
-          <i title="github" class="fab fa-github fa-lg social"></i>
-        </a>
-        <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-          <i title="email" class="far fa-envelope fa-lg social"></i>
-        </a>
-      </div>
-      <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
-    </footer>
+    <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
+  </footer>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
