--- a/certifications.html
+++ b/certifications.html
@@ -30,68 +30,79 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">Rishi Bodke</span>
-        <ul class="nav nav-pills justify-content-end">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Rishi Bodke</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ms-auto nav-pills justify-content-end">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="certifications.html">Certifications</a>
+            <a class="nav-link active text-light" aria-current="page" href="certifications.html">Certifications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
         </ul>
       </div>
-    </nav>
-    <main>
-      <h1 class="section-title my-xl-4">Certifications</h1>
+    </div>
+  </nav>
 
-      <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid" alt="...">
-            <h5 class="card-header">Google IT Support</h5>
+  <main>
+    <div class="container">
+      <section class="section">
+        <br><br>
+        <h1 class="section-title my-xl-4">Certifications</h1>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid" alt="...">
+              <h5 class="card-header">Google IT Support</h5>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100">
+              <img src="assets/web-design.jpg" class="card-img-top .img-fluid" alt="...">
+              <h5 class="card-header">Basic Web Design & Development</h5>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card h-100">
+              <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top" alt="...">
+              <h5 class="card-header">The Fundamentals of Digital Marketing</h5>
+            </div>
           </div>
         </div>
 
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/web-design.jpg" class="card-img-top .img-fluid" alt="...">
-            <h5 class="card-header">Basic Web Design & Development</h5>
-          </div>
-        </div>
+        <div class="mt-5"><a class="btn btn-primary"
+            href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing"
+            target="_blank">Download Resume</a></div>
+      </section>
+    </div>
 
-        <div class="col">
-          <div class="card h-100">
-            <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top" alt="...">
-            <h5 class="card-header">The Fundamentals of Digital Marketing</h5>
-          </div>
-        </div>
-      </div>
-
-      <div class="mt-5"><a class="btn btn-primary"
-          href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing"
-          target="_blank">Download Resume</a></div>
-    </main>
-    <footer class="bg-light">
-      <hr />
-      <div class="d-flex justify-content-center">
-        <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
-          <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
-        </a>
-        <a class="px-2" href="https://github.com/rishi698" target="_blank">
-          <i title="github" class="fab fa-github fa-lg social"></i>
-        </a>
-        <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-          <i title="email" class="far fa-envelope fa-lg social"></i>
-        </a>
-      </div>
-      <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
-    </footer>
+  </main>
+  <footer class="bg-light">
+    <hr />
+    <div class="d-flex justify-content-center">
+      <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+        <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
+      </a>
+      <a class="px-2" href="https://github.com/rishi698" target="_blank">
+        <i title="github" class="fab fa-github fa-lg social"></i>
+      </a>
+      <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+        <i title="email" class="far fa-envelope fa-lg social"></i>
+      </a>
+    </div>
+    <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
+  </footer>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
