--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
 </head>
 
 <body>
-  <div class="container">
-    <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">Rishi Bodke</span>
-        <ul class="nav nav-pills justify-content-end">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Rishi Bodke</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ms-auto nav-pills justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Portfolio</a>
+            <a class="nav-link active text-light" aria-current="page" href="index.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="certifications.html">Certifications</a>
@@ -46,9 +49,12 @@
           </li>
         </ul>
       </div>
-    </nav>
-    <main>
-      <h3 class="mt-2 text-center">Hello! I am <span style="color: rgb(9, 9, 156);">Rishi</span>, a UI/UX Designer and a
+    </div>
+  </nav>
+
+  <main>
+    <div class="container">
+      <h3 class="text-center mt-5">Hello! I am <span style="color: rgb(9, 9, 156);">Rishi</span>, a UI/UX Designer and a
         Front-end Developer!</h3>
       <section class="portfolio-section">
         <h2 class="section-title my-xl-4"><u>Projects</u></h2>
@@ -172,32 +178,34 @@
             </div>
           </div>
       </section>
-    </main>
-
-    <div class="mt-5">
-      <p>
-        Send Email for more details <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-          <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
-            <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
-          </a>
     </div>
+  </main>
+
+  <div class="container">
+    <p>
+      Send Email for more details <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+        <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2"
+        href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+        <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
+    </a>
+  </div>
 
 
-    <footer class="bg-light">
-      <hr />
-      <div class="d-flex justify-content-center">
-        <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
-          <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
-        </a>
-        <a class="px-2" href="https://github.com/rishi698" target="_blank">
-          <i title="github" class="fab fa-github fa-lg social"></i>
-        </a>
-        <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-          <i title="email" class="far fa-envelope fa-lg social"></i>
-        </a>
-      </div>
-      <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
-    </footer>
+  <footer class="bg-light">
+    <hr />
+    <div class="d-flex justify-content-center">
+      <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+        <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i>
+      </a>
+      <a class="px-2" href="https://github.com/rishi698" target="_blank">
+        <i title="github" class="fab fa-github fa-lg social"></i>
+      </a>
+      <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+        <i title="email" class="far fa-envelope fa-lg social"></i>
+      </a>
+    </div>
+    <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
+  </footer>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
