--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+  <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -55,6 +55,7 @@
   <main>
     <div class="container">
       <section>
+        <br>
         <h1 class="mt-5">About</h1>
         <div class="my-4">
           <div>
@@ -146,7 +147,7 @@
         <h4>SKILLS</h4>
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
-            <div class="card h-100">
+            <div class="card shadow h-100">
               <h5 class="card-header">Design</h5>
               <div class="card-body">
                 <p class="card-text"> Mobile & Desktop UI/UX Design, Research, Wireframing, Sketching, Prototyping,
@@ -157,7 +158,7 @@
           </div>
 
           <div class="col">
-            <div class="card h-100">
+            <div class="card shadow h-100">
               <h5 class="card-header">Front-end Development</h5>
               <div class="card-body">
                 <p class="card-text"> HTML5, CSS3, JavaScript, Sass, BootStrap, ReactJS, WordPress, Drupal, Joomla!
@@ -167,7 +168,7 @@
           </div>
 
           <div class="col">
-            <div class="card h-100">
+            <div class="card shadow h-100">
               <h5 class="card-header">Software</h5>
               <div class="card-body">
                 <p class="card-text"> Figma, Sketch, Proto.io, Invision, AdobeXD, Visual Studio Code, Microsoft Office
@@ -183,7 +184,7 @@
         <h4>PERSONAL DETAILS</h4>
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
-            <div class="card h-100">
+            <div class="card shadow h-100">
               <h5 class="card-header"><i class="fa fa-language" aria-hidden="true"></i> Languages </h5>
               <div class="card-body">
                 <p class="card-text"> English (fluent), Hindi(native),
@@ -194,7 +195,7 @@
           </div>
 
           <div class="col">
-            <div class="card h-100">
+            <div class="card shadow h-100">
               <h5 class="card-header">Interests</h5>
               <div class="card-body">
                 <p class="card-text"> Japan, Japanese Culture & History, India, Indian Culture & History, Travelling
@@ -204,7 +205,7 @@
           </div>
 
           <div class="col">
-            <div class="card h-100">
+            <div class="card shadow h-100">
               <h5 class="card-header">Hobbies</h5>
               <div class="card-body">
                 <p class="card-text"> Reading, Photography, Listening to Music, Sketching
@@ -221,7 +222,7 @@
       <hr />
       <div class="mt-3">
         <h5>Want to Contact?</h5>
-        <p>Send me a quick Mail<a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+        <p>Send me a quick Mail <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
             <i title="email" class="far fa-envelope fa-lg social"></i>
           </a>
           Or Connect with me on <a class="px-2" href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
@@ -235,6 +236,10 @@
           href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a>
       </div>
     </div>
+     <!-- Back to top button -->
+     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
   </main>
 
   <footer class="bg-light">
@@ -257,6 +262,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
