--- a/certifications.html
+++ b/certifications.html
@@ -26,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+  <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -55,38 +55,69 @@
   <main>
     <div class="container">
       <section class="section">
-        <br><br>
-        <h1 class="section-title my-xl-4">Certifications</h1>
+        <br>
+        <h1 class="my-5">Certifications</h1>
 
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
-            <div class="card h-100">
-              <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid" alt="...">
+            <div class="card shadow h-100">
+              <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(1)" alt="Google IT Support">
               <h5 class="card-header">Google IT Support</h5>
             </div>
           </div>
 
           <div class="col">
-            <div class="card h-100">
-              <img src="assets/web-design.jpg" class="card-img-top .img-fluid" alt="...">
+            <div class="card shadow h-100">
+              <img src="assets/web-design.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(2)"
+                alt="Basics of Web Design and Development">
               <h5 class="card-header">Basic Web Design & Development</h5>
             </div>
           </div>
 
           <div class="col">
-            <div class="card h-100">
-              <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top" alt="...">
+            <div class="card shadow h-100">
+              <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top"
+                onclick="openModal();currentSlide(3)" alt="The Fundamentals of Digital Marketing">
               <h5 class="card-header">The Fundamentals of Digital Marketing</h5>
             </div>
           </div>
         </div>
 
+        <div id="myModal" class="modal">
+          <span class="close cursor" onclick="closeModal()">&times;</span>
+          <div class="modal-content">
+
+            <div class="mySlides">
+              <div class="numbertext">1 / 3</div>
+              <img src="assets/google-it-support.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+              <div class="numbertext">2 / 3</div>
+              <img src="assets/web-design.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+              <div class="numbertext">3 / 3</div>
+              <img src="assets/digital-marketing.jpg" style="width:100%">
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+          </div>
+        </div>
+        <!-- Download Resume Button-->
         <div class="mt-5"><a class="btn btn-primary"
             href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing"
             target="_blank">Download Resume</a></div>
       </section>
     </div>
-
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
   </main>
   <footer class="bg-light">
     <hr />
@@ -108,6 +139,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
