--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link href="css/index.scss" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -54,6 +54,7 @@
 
   <main>
     <div class="container">
+      <br>
       <h3 class="text-center mt-5">Hello! I am <span style="color: rgb(9, 9, 156);">Rishi</span>, a UI/UX Designer and a
         Front-end Developer!</h3>
       <section class="portfolio-section">
@@ -62,7 +63,7 @@
         <div class="portfolio-wrapper">
           <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
             <div class="col">
-              <div class="card h-100">
+              <div class="card shadow h-100">
                 <img src="assets/portfolio.png" class="card-img-top" alt="...">
                 <h5 class="card-header">A Basic Online Portfolio</h5>
                 <div class="card-body">
@@ -76,7 +77,7 @@
             </div>
 
             <div class="col">
-              <div class="card h-100">
+              <div class="card shadow h-100">
                 <img src="assets/indian-sign-lang.png" class="card-img-top" alt="...">
                 <h5 class="card-header">Audio to Indian Sign Language Translator</h5>
                 <div class="card-body">
@@ -90,7 +91,7 @@
             </div>
 
             <div class="col">
-              <div class="card h-100">
+              <div class="card shadow h-100">
                 <img src="assets/policebot.png" class="card-img-top" alt="...">
                 <h5 class="card-title card-header">PoliceBot: A chatbot for crime reporting and awareness</h5>
                 <div class="card-body">
@@ -106,7 +107,7 @@
 
           <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
             <div class="col">
-              <div class="card h-100">
+              <div class="card shadow h-100">
                 <img src="assets/kanban.png" class="card-img-top" alt="...">
                 <h5 class="card-title card-header">A Simple Kanban Board</h5>
                 <div class="card-body">
@@ -120,7 +121,7 @@
             </div>
 
             <div class="col">
-              <div class="card h-100">
+              <div class="card shadow h-100">
                 <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
 
                 <h5 class="card-title card-header">Mayo Life site</h5>
@@ -135,7 +136,7 @@
             </div>
 
             <div class="col">
-              <div class="card h-100">
+              <div class="card shadow h-100">
                 <img src="assets/mayo_japan.png" class="card-img-top" alt="...">
                 <h5 class="card-header">Mayo Life's Android Webview App</h5>
                 <div class="card-body">
@@ -150,7 +151,7 @@
 
           <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
             <div class="col">
-              <div class="card h-100">
+              <div class="card shadow h-100">
                 <img src="assets/chanoyu_bushi.png" class="card-img-top" alt="...">
                 <h5 class="card-title card-header">Renovation of Chanoyu Bushi site</h5>
                 <div class="card-body">
@@ -164,7 +165,7 @@
             </div>
 
             <div class="col">
-              <div class="card h-100">
+              <div class="card shadow h-100">
                 <img src="assets/otaku_shinbun.png" class="card-img-top" alt="...">
                 <h5 class="card-title card-header">UI/UX Design for Otaku Shinbun Android App</h5>
                 <div class="card-body">
@@ -179,17 +180,20 @@
           </div>
       </section>
     </div>
+    <div class="container">
+      <p>
+        Send Email for more details <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
+          <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2"
+          href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
+          <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
+      </a>
+    </div>
+
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
   </main>
-
-  <div class="container">
-    <p>
-      Send Email for more details <a class="px-2" href="mailto:rishi6sep@gmail.com" target="_top">
-        <i title="email" class="far fa-envelope fa-lg social"></i></a> or Connect on <a class="px-2"
-        href="https://www.linkedin.com/in/rishi-bodke" target="_blank">
-        <i title="linkedin" class="fab fa-linkedin-in fa-lg social"></i></p>
-    </a>
-  </div>
-
 
   <footer class="bg-light">
     <hr />
@@ -211,6 +215,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
