made changes to author images and added icons to about page

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <h1 class="mt-5">About</h1>
         <div class="my-4">
           <div>
-            <img src="assets/me.jpg" class=" img-fluid col-md-3 float-md-end mb-2 ms-md-3 rounded-circle"
+            <img src="assets/me.jpg" id="author-img" class="img-fluid col-md-3 float-md-end mb-2 ms-md-3 rounded-circle"
               srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x" alt="the author's profile picture">
           </div>
           <div>
@@ -86,7 +86,7 @@
       <section class="resume-section">
         <div class="row">
           <div class="col-lg-6">
-            <h4 class="section-title">EXPERIENCE</h4>
+            <h4 class="section-title"><i class="fas fa-briefcase"></i> EXPERIENCE</h4>
             <ul class="time-line">
               <li class="time-line-item">
                 <span class="badge bg-primary">Oct 2021 ~ Present</span>
@@ -116,7 +116,7 @@
             </ul>
           </div>
           <div class="col-lg-6">
-            <h4 class="section-title">EDUCATION</h4>
+            <h4 class="section-title"><i class="fas fa-graduation-cap"></i> EDUCATION</h4>
             <ul class="time-line">
               <li class="time-line-item">
                 <span class="badge bg-primary">Jan 2022 ~ Present</span>
@@ -144,7 +144,7 @@
         </div>
       </section>
       <section>
-        <h4>SKILLS</h4>
+        <h4><i class="fas fa-magic"></i>SKILLS</h4>
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
             <div class="card shadow h-100">
