fixed image not loading issue in mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Rishi Bodke</a>
+      <a class="navbar-brand" href="index.html"><h4>Rishi Bodke</h4></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -58,7 +58,7 @@
       <h3 class="text-center mt-5">Hello! I am <span style="color: rgb(9, 9, 156);">Rishi</span>, a UI/UX Designer and a
         Front-end Developer!</h3>
       <section class="portfolio-section">
-        <h2 class="section-title my-xl-4"><u>Projects</u></h2>
+        <h1 class="section-title my-4">Projects</h1>
 
         <div class="portfolio-wrapper">
           <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
