--- a/about.html
+++ b/about.html
@@ -32,7 +32,9 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Rishi Bodke</a>
+      <a class="navbar-brand" href="index.html">
+        <h4>Rishi Bodke</h4>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -60,7 +62,7 @@
         <div class="my-4">
           <div>
             <img src="assets/me.jpg" id="author-img" class="img-fluid col-md-3 float-md-end mb-2 ms-md-3 rounded-circle"
-              srcset="assets/me@2x.jpg 2x, assets/me@3x.jpg 3x" alt="the author's profile picture">
+              alt="the author's profile picture">
           </div>
           <div>
             <p>I'm a UI/UX Designer and Front-end Developer from India, working in Mobility & User Experience and Web
@@ -181,7 +183,7 @@
       </section>
 
       <section>
-        <h4>PERSONAL DETAILS</h4>
+        <h4><i class="fas fa-user"></i>PERSONAL DETAILS</h4>
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
           <div class="col">
             <div class="card shadow h-100">
@@ -236,8 +238,8 @@
           href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a>
       </div>
     </div>
-     <!-- Back to top button -->
-     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
+    <!-- Back to top button -->
+    <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
       <i class="fas fa-arrow-up"></i>
     </button>
   </main>
@@ -262,7 +264,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
