--- a/certifications.html
+++ b/certifications.html
@@ -32,7 +32,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Rishi Bodke</a>
+      <a class="navbar-brand" href="index.html"><h4>Rishi Bodke</h4></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
