updated the sign language project page

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <a class="nav-link active text-light" aria-current="page" href="index.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="certifications.html">Certifications</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="certifications.html">Certifications</a>
           </li>
         </ul>
       </div>
@@ -55,8 +55,8 @@
   <main>
     <div class="container">
       <br>
-      <h3 class="text-center mt-5">Hello! I am <span style="color: rgb(9, 9, 156);">Rishi</span>, a UI/UX Designer and a
-        Front-end Developer!</h3>
+      <h3 class="text-center mt-5"><span style="color: rgb(9, 9, 156);">Rishi</span> is a UI/UX Designer and a
+        Front-end Developer, focused on creating simple, efficient and powerful digital experiences for different kinds of users.</h3>
       <section class="portfolio-section">
         <h1 class="section-title my-4">Projects</h1>
 
@@ -85,7 +85,7 @@
                     Indian Sign Language and display it using gifs. </p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">READ MORE</a>
+                  <a href="projects/audio-to-indian-sign-language-translator.html" class="btn btn-primary">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -208,7 +208,7 @@
         <i title="email" class="far fa-envelope fa-lg social"></i>
       </a>
     </div>
-    <p class="d-flex justify-content-center mt-2">Made with ❤️by Rishi, ©2022</p>
+    <p class="d-flex justify-content-center mt-2">Made with ❤️ by Rishi, © 2022</p>
   </footer>
 
   </div>
