--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="col">
               <div class="card shadow h-100">
                 <img src="assets/indian-sign-lang.png" class="card-img-top" href="projects/audio-to-indian-sign-language-translator.html" alt="Indian Sign Language Project Image">
-                <h5 class="card-header">Audio to Indian Sign Language Translator</h5>
+                <h5 class="card-header" href="projects/audio-to-indian-sign-language-translator.html">Audio to Indian Sign Language Translator</h5>
                 <div class="card-body">
                   <p class="card-text">A simple web application that can translate audio or textual input into the
                     Indian Sign Language and display it using gifs. </p>
