--- a/projects/audio-to-indian-sign-language-translator.html
+++ b/projects/audio-to-indian-sign-language-translator.html
@@ -61,7 +61,7 @@
       <h1 class="mt-5">Audio to Indian Sign Language Translator</h1>
       <div class="text-center">
         <figure>
-          <img src="../assets/indian-sign-lang.png" alt="Audio to Indian Sign Language Translator Image">
+          <img src="../assets/indian-sign-lang.png" alt="Audio to Indian Sign Language Translator Image" class="img-fluid">
           <figcaption>1-1</figcaption>
         </figure>
       </div>
