--- a/projects/audio-to-indian-sign-language-translator.html
+++ b/projects/audio-to-indian-sign-language-translator.html
@@ -61,7 +61,7 @@
       <h1 class="mt-5">Audio to Indian Sign Language Translator</h1>
       <div class="text-center">
         <figure>
-          <img src="../assets/indian-sign-lang.png" alt="Audio to Indian Sign Language Translator Image" class="img-fluid">
+          <img src="../assets/indian-sign-lang.png" alt="Audio to Indian Sign Language Translator Image" width="100%" height="auto" class="img-fluid">
           <figcaption>1-1</figcaption>
         </figure>
       </div>
@@ -129,10 +129,10 @@
           vast
           library.</span></p>
         <figure class="text-center">
-          <centre><video width="560" height="315" alt="Project Demo Video" preload="none" controls
+          <video  width="100%" height="auto" alt="Project Demo Video" preload="none" controls
               poster="../assets/indian-sign-lang.png">
               <source src="../assets/project-1-demo.webm" type="video/webm">
-            </video></centre>
+            </video>
           <figcaption>Demo video of the webapp being used to translate audio/text into sign language. </figcaption>
         </figure>
       </div>
