added stretched links to the cards

--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
                     CSS3, JavaScript and Bootstrap 5.</p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">READ MORE</a>
+                  <a href="projects/simple-portfolio.html" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
 
             <div class="col">
               <div class="card shadow h-100">
-                <img src="assets/indian-sign-lang.png" class="card-img-top" href="projects/audio-to-indian-sign-language-translator.html" alt="Indian Sign Language Project Image">
-                <h5 class="card-header" href="projects/audio-to-indian-sign-language-translator.html">Audio to Indian Sign Language Translator</h5>
+                <img src="assets/indian-sign-lang.png" class="card-img-top" alt="Indian Sign Language Project Image">
+                <h5 class="card-header">Audio to Indian Sign Language Translator</h5>
                 <div class="card-body">
                   <p class="card-text">A simple web application that can translate audio or textual input into the
                     Indian Sign Language and display it using gifs. </p>
                 </div>
                 <div class="card-footer">
-                  <a href="projects/audio-to-indian-sign-language-translator.html" class="btn btn-primary">READ MORE</a>
+                  <a href="projects/audio-to-indian-sign-language-translator.html" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -99,7 +99,7 @@
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">READ MORE</a>
+                  <a href="projects/policebot.html" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -115,7 +115,7 @@
                     JavaScript..</p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">READ MORE</a>
+                  <a href="#" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">READ MORE</a>
+                  <a href="mayo-life.site" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -143,7 +143,7 @@
                   <p class="card-text"> A simple Webview Android Application for Mayo Japan's website.</p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">READ MORE</a>
+                  <a href="https://play.google.com/store/apps/details?id=com.isshin.mayo_japan" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -159,7 +159,7 @@
                     Japanese Sado master.</p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">READ MORE</a>
+                  <a href="https://en.chanoyu-bushi.com/wp/" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -173,7 +173,7 @@
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">READ MORE</a>
+                  <a href="https://play.google.com/store/apps/details?id=com.isshin.otakushinbun" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
