--- a/projects/audio-to-indian-sign-language-translator.html
+++ b/projects/audio-to-indian-sign-language-translator.html
@@ -33,7 +33,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="../index.html">
         <h4>Rishi Bodke</h4>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ms-auto nav-pills justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="/rishi/index.html">Portfolio</a>
+            <a class="nav-link" href="/rishi/index.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
