Added Resume and other minor changes

--- a/projects/audio-to-indian-sign-language-translator.html
+++ b/projects/audio-to-indian-sign-language-translator.html
@@ -75,7 +75,7 @@
           <div class="card shadow h-100">
             <h5 class="card-header">Date</h5>
             <div class="card-body">
-              <p class="card-text"> March 2021 - Mat 2021
+              <p class="card-text"> March 2021 - May 2021
               </p>
             </div>
           </div>
