--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="certifications.html">Certifications</a>
-          </li>  
+          </li>
         </ul>
       </div>
     </div>
@@ -218,8 +218,7 @@
         </div>
       </section>
 
-      <div class="cta" style="margin-bottom: 0;"><a class="btn btn-primary"
-          href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing"
+      <div class="cta" style="margin-bottom: 0;"><a class="btn btn-primary" href="/rishi/assets/Rishi-Bodke-Resume.pdf"
           target="_blank">Download Resume</a></div>
       <hr />
       <div class="mt-3">
@@ -234,9 +233,9 @@
       </div>
       <hr />
       <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light"
-        data-type="VERTICAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link"
-          href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a>
-      </div>
+        data-type="HORIZONTAL" data-vanity="rishi-bodke" data-version="v1"><a class="badge-base__link LI-simple-link"
+          href="https://in.linkedin.com/in/rishi-bodke?trk=profile-badge">Rishi B.</a></div>
+
     </div>
     <!-- Back to top button -->
     <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
@@ -264,6 +263,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <script src="script.js"></script>
 </body>
 
