--- a/certifications.html
+++ b/certifications.html
@@ -32,7 +32,9 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><h4>Rishi Bodke</h4></a>
+      <a class="navbar-brand" href="index.html">
+        <h4>Rishi Bodke</h4>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -59,11 +61,12 @@
         <h1 class="my-5">Certifications</h1>
 
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+
           <div class="col">
             <div class="card shadow h-100">
-              <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid"
-                onclick="openModal();currentSlide(1)" alt="Google IT Support">
-              <h5 class="card-header">Google IT Support</h5>
+              <img src="assets/ux-design.jpg" class="card-img-top .img-fluid" onclick="openModal();currentSlide(2)"
+                alt="Basics of Web Design and Development">
+              <h5 class="card-header">Foundations of UX Design</h5>
             </div>
           </div>
 
@@ -77,9 +80,19 @@
 
           <div class="col">
             <div class="card shadow h-100">
+              <img src="assets/google-it-support.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(1)" alt="Google IT Support">
+              <h5 class="card-header">Google IT Support</h5>
+            </div>
+          </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+          <div class="col">
+            <div class="card shadow h-100">
               <img src="assets/digital-marketing.jpg" class=".img-fluid card-img-top"
                 onclick="openModal();currentSlide(3)" alt="The Fundamentals of Digital Marketing">
-              <h5 class="card-header">The Fundamentals of Digital Marketing</h5>
+              <h5 class="card-header">Fundamentals of Digital Marketing</h5>
             </div>
           </div>
         </div>
@@ -89,17 +102,22 @@
           <div class="modal-content">
 
             <div class="mySlides">
-              <div class="numbertext">1 / 3</div>
-              <img src="assets/google-it-support.jpg" style="width:100%">
+              <div class="numbertext">1 / 4</div>
+              <img src="assets/ux-design.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">2 / 3</div>
+              <div class="numbertext">2 / 4</div>
               <img src="assets/web-design.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
-              <div class="numbertext">3 / 3</div>
+              <div class="numbertext">3 / 4</div>
+              <img src="assets/google-it-support.jpg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+              <div class="numbertext">4 / 4</div>
               <img src="assets/digital-marketing.jpg" style="width:100%">
             </div>
 
@@ -110,7 +128,7 @@
         </div>
         <!-- Download Resume Button-->
         <div class="mt-5"><a class="btn btn-primary"
-            href="https://drive.google.com/file/d/1dwnTMBxjkhZ1GeUWI7xvjJDZZJtCWsHb/view?usp=sharing"
+            href="/rishi/assets/Rishi-Bodke-Resume.pdf"
             target="_blank">Download Resume</a></div>
       </section>
     </div>
