--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <main>
     <div class="container">
       <br>
-      <h3 class="text-center mt-5"><span style="color: rgb(9, 9, 156);">Rishi</span> is a UI/UX Designer and a
+      <h3 class="text-center mt-5 text-muted"><span style="color: rgb(9, 9, 156);">Rishi</span> is a UI/UX Designer and a
         Front-end Developer, focused on creating simple, efficient and powerful digital experiences for different kinds of users.</h3>
       <section class="portfolio-section">
         <h1 class="section-title my-4">Projects</h1>
@@ -115,7 +115,7 @@
                     JavaScript..</p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary stretched-link">READ MORE</a>
+                  <a href="https://rishi698.github.io/kanban" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a href="mayo-life.site" class="btn btn-primary stretched-link">READ MORE</a>
+                  <a href="https://mayo-life.site" class="btn btn-primary stretched-link">READ MORE</a>
                 </div>
               </div>
             </div>
