--- a/about.html
+++ b/about.html
@@ -218,8 +218,9 @@
         </div>
       </section>
 
-      <div class="cta" style="margin-bottom: 0;"><a class="btn btn-primary" href="/rishi/assets/Rishi-Bodke-Resume.pdf"
-          target="_blank">Download Resume</a></div>
+      <div class="mt-5"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf"
+        target="_blank">Download Resume(ENG)</a>　　　<a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf"
+        target="_blank">Download Resume(日本)</a></div>
       <hr />
       <div class="mt-3">
         <h5>Want to Contact?</h5>
@@ -259,7 +260,6 @@
     <p class="d-flex justify-content-center mt-2">Made with ❤️ by Rishi, © 2022</p>
   </footer>
 
-  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
