--- a/certifications.html
+++ b/certifications.html
@@ -127,9 +127,9 @@
           </div>
         </div>
         <!-- Download Resume Button-->
-        <div class="mt-5"><a class="btn btn-primary"
-            href="/rishi/assets/Rishi-Bodke-Resume.pdf"
-            target="_blank">Download Resume</a></div>
+        <div class="mt-5"><a class="btn btn-primary" href="/rishi/assets/Rishi-Resume-Eng.pdf"
+          target="_blank">Download Resume(ENG)</a>　　　<a class="btn btn-danger" href="/rishi/assets/Rishi-Resume-Jap.pdf"
+          target="_blank">Download Resume(日本)</a></div>
       </section>
     </div>
     <!-- Back to top button -->
